Displaying times from parse.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="white">#fff</color>
     <color name="blue">#0066FF</color>
+    <color name="baby_blue">#3385D6</color>
+    <color name="gold">#CBA135</color>
 </resources>
