--- a/app/src/main/res/drawable/button_blue.xml
+++ b/app/src/main/res/drawable/button_blue.xml
@@ -2,14 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
 
-    <gradient
-        android:startColor="@color/dark_blue"
-        android:centerColor="@color/blue"
-        android:endColor="@color/dark_blue"
-        android:angle="270"/>
-
-    <corners android:radius="7dp"/>
-
-    <stroke android:width="1px" android:color="@color/blue"/>
+    <corners android:radius="7dp" />
+    <solid android:color="@color/blue" />
 
 </shape>
