--- a/app/src/main/res/layout/fragment_pick_day.xml
+++ b/app/src/main/res/layout/fragment_pick_day.xml
@@ -13,24 +13,51 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp">
 
-        <EditText
-            android:id="@+id/users_name"
+        <LinearLayout
+            android:id="@+id/user_info"
+            android:layout_weight="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="@string/your_name"
-            android:textColorHint="@color/white"
-            android:textColor="@color/white"
-            android:background="@drawable/button_blue_press"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"/>
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/users_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/your_name"
+                android:textColorHint="@color/white"
+                android:textColor="@color/white"
+                android:background="@drawable/button_blue_press"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:maxLines="1"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginBottom="8dp"/>
+
+            <EditText
+                android:id="@+id/users_org"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/your_org"
+                android:textColorHint="@color/white"
+                android:textColor="@color/white"
+                android:background="@drawable/button_blue_press"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:maxLines="1"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"/>
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/show_days"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="@string/show_days"
+            android:textSize="12sp"
             android:textColor="@color/white"
             android:background="@drawable/button_blue_press"
             android:paddingLeft="16dp"
