Updated for the 2016 bike a thon. it now posts the data to a google sheet to better organize sign ups.

--- a/app/src/main/res/layout/time_slot_row.xml
+++ b/app/src/main/res/layout/time_slot_row.xml
@@ -21,7 +21,6 @@
         android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
         android:paddingRight="7dp"
-        android:textSize="12sp"
-        android:textColor="@color/white"/>
+        android:textSize="12sp" />
 
 </RelativeLayout>
