--- a/app/src/main/res/layout/fragment_pick_day.xml
+++ b/app/src/main/res/layout/fragment_pick_day.xml
@@ -28,7 +28,7 @@
                     android:id="@+id/march24thButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/March24th"
+                    android:text="March 22nd, 2016"
                     android:textColor="@color/white"
                     android:background="@drawable/button_blue_press"
                     android:layout_margin="16dp"/>
@@ -37,7 +37,7 @@
                     android:id="@+id/march25thButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/March25th"
+                    android:text="March 23rd, 2016"
                     android:textColor="@color/white"
                     android:background="@drawable/button_blue_press"
                     android:layout_margin="16dp"/>
@@ -46,7 +46,7 @@
                     android:id="@+id/march26thButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/March26th"
+                    android:text="March 24th, 2016"
                     android:textColor="@color/white"
                     android:background="@drawable/button_blue_press"
                     android:layout_margin="16dp"/>
