--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -17,27 +17,37 @@
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            />
 
         <Button
-            android:id="@+id/previous_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/previous"
-            android:background="@android:color/transparent"
-            android:textColor="@color/gold"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentBottom="true"/>
+            android:text="Click here to learn more!"
+            android:id="@+id/learnbutton"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            />
 
-        <Button
-            android:id="@+id/next_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/next"
-            android:background="@android:color/transparent"
-            android:textColor="@color/gold"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"/>
+        <!--<Button-->
+            <!--android:id="@+id/previous_button"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/previous"-->
+            <!--android:background="@android:color/transparent"-->
+            <!--android:textColor="@color/gold"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--android:layout_alignParentBottom="true"/>-->
+
+        <!--<Button-->
+            <!--android:id="@+id/next_button"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/next"-->
+            <!--android:background="@android:color/transparent"-->
+            <!--android:textColor="@color/gold"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_alignParentBottom="true"/>-->
 
     </RelativeLayout>
 
